# llvm_tutorial

./: README.md
experiment1/: CMakeLists.txt  Note.txt  PrintFunctionNames.cpp
experiment1/example/: test1.cpp  test1.ll
experiment2/: CMakeLists.txt  Note.txt  main.cpp  test.cpp
experiment2/example/: hello_world.cu  test1.cpp  wrapper_code.cu
experiment3/: CMakeLists.txt  Note.txt  main.cpp
experiment3/example/: wrapper_code.cu
experiment4/: CMakeLists.txt  Note.txt  PrintProgram.cpp  PrintProgram.h  main.cpp
experiment4/example/: wrapper_code.cu
experiment5/: CMakeLists.txt  ChangeAST.cpp  ChangeAST_old.cpp  Note.txt  test.cpp
experiment5/example/: wrapper_code.cu
experiment6/: CMakeLists.txt  InjectAST.cpp  Note.txt  gen_code_from_InjectedAST.cpp
experiment6/example/: fun1.cpp  fun2.cpp
experiment7/: CMakeLists.txt  MutateAST.cpp  MutateAST2.cpp  Note.txt  create_inject_generate.cpp
experiment7/example/: fun1.cpp  fun2.cpp
experiment8/: CMakeLists.txt  CallGraph.cpp  DFS.cpp  Note.txt
experiment8/example/: fun1.cpp
experiment9/: CMakeLists.txt  Note.txt  matcher.cpp
experiment9/example/: wrapper_code.cu
ir_experiments/: .callee.dot  .main.dot  Note.txt  a.out  test1.arm  test1.cpp  test1.ir  test1.ll  test1.x86  test2.c  test2.ir  test2_opt.bc  test2_opt.x86  test2_optnone.ir  test2_optnone_optimized.ir  test2_optnone_optimized.ir.callgraph.dot
